--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "site-with-a-login",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +13,18 @@
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
     "mustache": "^2.3.0",
-    "mustache-express": "^1.2.5"
-  }
+    "mustache-express": "^1.2.5",
+    "parseurl": "^1.3.1",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SamSteele01/site-with-a-login.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SamSteele01/site-with-a-login/issues"
+  },
+  "homepage": "https://github.com/SamSteele01/site-with-a-login#readme",
+  "description": ""
 }
